--- a/src/styles/_ingridients.scss
+++ b/src/styles/_ingridients.scss
@@ -41,7 +41,6 @@
       left: 0;
       width: 100%;
       height: 3px;
-      
       background-color: #e5f2fa;
     }
   }
@@ -55,7 +54,7 @@
   }
 }
 
-@media (max-width: 1130px) {
+@media (max-width: 1220px) {
   .ingridients {
     padding: 50px 30px 25px;
     text-align: center;
@@ -66,9 +65,5 @@
     &__img {
       display: none;
     }
-  }
-  .composition-card {
-    max-width: 240px;
-    padding: 0 10px;
   }
 }
