--- a/src/styles/_order-cream.scss
+++ b/src/styles/_order-cream.scss
@@ -13,6 +13,7 @@
     font-size: 48px;
   }
   &__text {
+    max-width: 400px;
     margin-bottom: 50px;
     font-size: 22px;
   }
@@ -24,7 +25,12 @@
 
 @media (max-width: 1130px) {
   .order-cream {
-    text-align: center;
+    &__wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
   }
 }
 
